<resources>
    <string name="app_name">Zdravko</string>
    <string name="action_settings">Settings</string>
    <string name="tab1_title">Sky Observations</string>
    <string name="tab2_title">Planet Wiki</string>
    <string name="tab3_title">Notes</string>
    <string name="blood_description">V Sloveniji potrebujemo v povprečju okoli 300 do 350 krvodajalcev na dan, da bolnikom zagotovimo potrebno količino krvi.\n\nPostani krvodajalec tudi ti ter s tem zbiraj kovančke</string>
    <string name="blood_png">🩸</string>
    <string name="donate">Krvodajalstvo 🩸</string>

    <!-- Strings used for fragments for navigation -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_in_text">Prijavi se!</string>
    <string name="register_text">Registriraj se!</string>
    <string name="reg_name_hint">Uporabniško ime</string>
    <string name="reg_pass_hint">Geslo</string>
    <string name="reg_pass_again_hint">Ponovi geslo</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_sex_hint">Spol</string>
    <string name="reg_age_hint">Starost</string>
    <string name="reg_button">POTRDI</string>
    <string name="lgn_button">PRIJAVA</string>
    <string name="to_reg_button">REGISTRACIJA</string>
    <string name="sex_m">Moški</string>
    <string name="sex_f">Ženski</string>
    <string name="genderPrompt">Spol</string>
    <string name="sign_in">Prijavi se!</string>
    <string name="doRegText">Še nimaš uporabniškega računa?\n Registriraj se!</string>


    <!-- Strings used for fragments for navigation -->
    <string name="notes_text">Our citizen scientist should be able to put notes here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Uporabnik</string>
    <string name="Coins">🪙 __</string>
    <string name="appName">Zdravko</string>
    <string name="next_lvl"> 🪙 Za naslednjo stopnjo</string>
    <string name="Krvodajalstvo">Krvodajalstvo</string>
    <string name="Svit">Program svit</string>
    <string name="Zobozdravstvo">Zobozdravstvo</string>
    <string name="visit_counter">__ X</string>
    <string name="cancer_png">♋</string>
    <string name="tooth_png">🦷</string>
    <string name="achievements">Dosežki</string>
    <string name="svitPregled">Nov pregled svit</string>
    <string name="svit_description">Program Svit je preventivni zdravstveni program, ki je namenjen preprečevanju in zgodnjemu odkrivanju predrakavih sprememb in raka na debelem črevesu in danki. \nPridružite se programu ter s tem zbirajte kovančke!</string>
    <string name="svitIme">Program svit</string>
    <string name="ToothDescription">Kako zdrav bo naš nasmeh, je v prvi vrsti odvisno od nas samih, ki bomo po svojih najboljših močeh skrbeli za svoje zdravje in pravočasno poiskali pomoč zobozdravnika.\n Obiščite zobozdravnike ter hkrati pridobite kovance!</string>
</resources>
