<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next_lvl"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">


    </TextView>

    <LinearLayout
        android:id="@+id/btnCounterLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Krvodajalstvo"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <Button
                android:id="@+id/kdBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/blood_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/svitBtn"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/kdCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visit_counter"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="5dp"
                android:text="@string/Svit"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/svitBtn"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/cancer_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/zobBtn"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/kdBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/svitCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visit_counter"
                android:layout_marginRight="11dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Zobozdravstvo"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/zobBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooth_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/svitBtn"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="0.155" />

            <TextView
                android:id="@+id/zobCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visit_counter"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/achievementsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/achievements"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCounterLinear" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/achievementsRecyclerView"
        android:layout_width="409dp"
        android:layout_height="408dp"
        android:layout_marginTop="20dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/achievementsTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>