<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context=".LoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Add your layout container here -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:src="@drawable/healthcare" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/logo"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/blue"
                android:drawableLeft="@drawable/baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="Uporabniško ime"
                android:padding="20dp"
                android:textColorHint="@color/darkGrey" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/blue"
                android:drawableLeft="@drawable/baseline_lock_open_24"
                android:drawablePadding="20dp"
                android:hint="@string/reg_pass_hint"
                android:padding="20dp"
                android:textColorHint="@color/darkGrey"
                android:inputType="textPassword"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lgn_btn"
                android:layout_below="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/lgn_button"
                android:onClick="login"/>
            <TextView
                android:id="@+id/regText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lgn_btn"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/doRegText"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/regbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regText"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/darkBlue"
                android:text="@string/to_reg_button"
                android:onClick="register"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
